// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om deg og avdød Snapshot med sivilstatus samboer 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
    <div
      aria-live="polite"
    />
  </fieldset>
  <form>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <p
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </p>
      <div
        class="navds-grid"
      >
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
                for="avdoed.fornavn"
              >
                omDegOgAvdoed.avdoed.fornavn
              </label>
              <input
                aria-invalid="false"
                class="skjemaelement__input input--fullbredde"
                id="avdoed.fornavn"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
                for="avdoed.etternavn"
              >
                omDegOgAvdoed.avdoed.etternavn
              </label>
              <input
                aria-invalid="false"
                class="skjemaelement__input input--fullbredde"
                id="avdoed.etternavn"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <p
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.datoForDoedsfallet
      </p>
      <section
        class="sc-dmyDGi chgRCf"
      >
        <label
          class="skjemaelement__label"
          for="avdoed.datoForDoedsfallet"
        >
          omDegOgAvdoed.avdoed.dato felles.datoformat
        </label>
        <div
          class="sc-guDLRT bRVfWM"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="ds-datepicker"
              >
                <div
                  class="ds-datepicker__input navds-form-field navds-form-field--medium"
                >
                  <label
                    class="navds-text-field__label sr-only navds-label"
                    for="avdoed.datoForDoedsfallet"
                  >
                    abc
                  </label>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    placeholder="felles.datoEksempel"
                    type="text"
                    value=""
                  />
                  <div
                    aria-live="polite"
                    aria-relevant="additions removals"
                    id="textField-error-456"
                  />
                </div>
                <button
                  aria-expanded="false"
                  class="ds-datepicker__kalenderknapp"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Kalender
                  </span>
                  <span
                    aria-hidden="true"
                    class="ds-datepicker__kalenderknapp__icon"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      role="presentation"
                      style="pointer-events: none;"
                      viewBox="0 0 18 18"
                      width="16"
                    >
                      <title>
                        Kalenderikon
                      </title>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="#0067C5"
                      >
                        <path
                          d="M4 2.667H1.333v14h15.334v-14H14"
                        />
                        <path
                          d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        
      </section>
      <div
        aria-live="polite"
      />
    </fieldset>
    <div
      id="forholdTilAvdoede.relasjon"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe inputPanelGruppe"
      >
        <legend
          class="skjemagruppe__legend"
        >
          omDegOgAvdoed.forholdTilAvdoede.relasjon
        </legend>
        <div
          class="inputPanelGruppe__inner"
        >
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.gift"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.gift
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.separert"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.separert
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.samboer"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.samboer
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.skilt"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.skilt
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.tidligereSamboer"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.tidligereSamboer
            </span>
          </label>
        </div>
        <div
          aria-live="polite"
        />
      </fieldset>
    </div>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-hLQRIN fqWvND"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          omDegOgAvdoed.nySivilstatus.sivilstatus
        </h1>
        <p
          class="navds-body-long"
        >
          omDegOgAvdoed.nySivilstatus.beskrivelse
        </p>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="nySivilstatus.sivilstatus"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe"
        >
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.enslig"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.enslig
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.ekteskap"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.ekteskap
              </span>
            </label>
            <label
              class="inputPanel radioPanel inputPanel--checked"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.samboerskap"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.samboerskap
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        class="navds-panel navds-panel--border"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe"
        >
          <h1
            class="navds-heading navds-heading--small"
          >
            omDegOgAvdoed.nySivilstatus.samboerskap.samboer.tittel
          </h1>
          <div
            aria-live="polite"
          />
        </fieldset>
        <div
          class="navds-grid"
        >
          <div
            class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
          >
            <div
              class="kol-50"
            >
              <div
                class="skjemaelement"
              >
                <label
                  class="skjemaelement__label"
                  for="nySivilstatus.samboerskap.samboer.fornavn"
                >
                  omDegOgAvdoed.nySivilstatus.samboerskap.samboer.fornavn
                </label>
                <input
                  aria-invalid="false"
                  class="skjemaelement__input input--fullbredde"
                  id="nySivilstatus.samboerskap.samboer.fornavn"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
          >
            <div
              class="kol-50"
            >
              <div
                class="skjemaelement"
              >
                <label
                  class="skjemaelement__label"
                  for="nySivilstatus.samboerskap.samboer.etternavn"
                >
                  omDegOgAvdoed.nySivilstatus.samboerskap.samboer.etternavn
                </label>
                <input
                  aria-invalid="false"
                  class="skjemaelement__input input--fullbredde"
                  id="nySivilstatus.samboerskap.samboer.etternavn"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="skjemaelement"
        >
          <label
            class="skjemaelement__label"
            for="nySivilstatus.samboerskap.samboer.foedselsnummer"
          >
            felles.fnr
          </label>
          <input
            aria-invalid="false"
            class="skjemaelement__input input--s"
            id="nySivilstatus.samboerskap.samboer.foedselsnummer"
            placeholder="felles.fnrPlaceholder"
            required=""
            type="tel"
            value=""
          />
        </div>
        <div
          id="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
        >
          <fieldset
            aria-invalid="false"
            class="skjemagruppe inputPanelGruppe sc-beySbM TaHmL"
          >
            <legend
              class="skjemagruppe__legend"
            >
              omDegOgAvdoed.nySivilstatus.samboerskap.hattBarnEllerVaertGift
            </legend>
            <div
              class="inputPanelGruppe__inner"
            >
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
                  required=""
                  type="radio"
                  value="radiobuttons.ja"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.ja
                </span>
              </label>
              <label
                class="inputPanel radioPanel"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="inputPanel__field"
                  name="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
                  required=""
                  type="radio"
                  value="radiobuttons.nei"
                />
                <span
                  class="inputPanel__label"
                >
                  radiobuttons.nei
                </span>
              </label>
            </div>
            <div
              aria-live="polite"
            />
          </fieldset>
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-ifyqMZ bWoqpb"
    >
      <div
        class="sc-gLLvby idHBWd undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-button__inner navds-body-short"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-button__inner navds-body-short"
          >
            knapp.neste
          </span>
        </button>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-iBdmCd dgiWjO undefined"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-button__inner navds-body-short"
        >
          knapp.avbryt
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
  </form>
</div>
`;

exports[`Om deg og avdød Snapshot uten samboerskjema 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
    <div
      aria-live="polite"
    />
  </fieldset>
  <form>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <p
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </p>
      <div
        class="navds-grid"
      >
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
                for="avdoed.fornavn"
              >
                omDegOgAvdoed.avdoed.fornavn
              </label>
              <input
                aria-invalid="false"
                class="skjemaelement__input input--fullbredde"
                id="avdoed.fornavn"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="skjemaelement"
            >
              <label
                class="skjemaelement__label"
                for="avdoed.etternavn"
              >
                omDegOgAvdoed.avdoed.etternavn
              </label>
              <input
                aria-invalid="false"
                class="skjemaelement__input input--fullbredde"
                id="avdoed.etternavn"
                required=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe"
    >
      <p
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.datoForDoedsfallet
      </p>
      <section
        class="sc-dmyDGi chgRCf"
      >
        <label
          class="skjemaelement__label"
          for="avdoed.datoForDoedsfallet"
        >
          omDegOgAvdoed.avdoed.dato felles.datoformat
        </label>
        <div
          class="sc-guDLRT bRVfWM"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="ds-datepicker"
              >
                <div
                  class="ds-datepicker__input navds-form-field navds-form-field--medium"
                >
                  <label
                    class="navds-text-field__label sr-only navds-label"
                    for="avdoed.datoForDoedsfallet"
                  >
                    abc
                  </label>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    placeholder="felles.datoEksempel"
                    type="text"
                    value=""
                  />
                  <div
                    aria-live="polite"
                    aria-relevant="additions removals"
                    id="textField-error-456"
                  />
                </div>
                <button
                  aria-expanded="false"
                  class="ds-datepicker__kalenderknapp"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Kalender
                  </span>
                  <span
                    aria-hidden="true"
                    class="ds-datepicker__kalenderknapp__icon"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      role="presentation"
                      style="pointer-events: none;"
                      viewBox="0 0 18 18"
                      width="16"
                    >
                      <title>
                        Kalenderikon
                      </title>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="#0067C5"
                      >
                        <path
                          d="M4 2.667H1.333v14h15.334v-14H14"
                        />
                        <path
                          d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        
      </section>
      <div
        aria-live="polite"
      />
    </fieldset>
    <div
      id="forholdTilAvdoede.relasjon"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe inputPanelGruppe"
      >
        <legend
          class="skjemagruppe__legend"
        >
          omDegOgAvdoed.forholdTilAvdoede.relasjon
        </legend>
        <div
          class="inputPanelGruppe__inner"
        >
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.gift"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.gift
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.separert"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.separert
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.samboer"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.samboer
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.skilt"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.skilt
            </span>
          </label>
          <label
            class="inputPanel radioPanel"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="inputPanel__field"
              name="forholdTilAvdoede.relasjon"
              required=""
              type="radio"
              value="avdoede.relasjon.tidligereSamboer"
            />
            <span
              class="inputPanel__label"
            >
              avdoede.relasjon.tidligereSamboer
            </span>
          </label>
        </div>
        <div
          aria-live="polite"
        />
      </fieldset>
    </div>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-hLQRIN fqWvND"
    >
      <fieldset
        aria-invalid="false"
        class="skjemagruppe"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          omDegOgAvdoed.nySivilstatus.sivilstatus
        </h1>
        <p
          class="navds-body-long"
        >
          omDegOgAvdoed.nySivilstatus.beskrivelse
        </p>
        <div
          aria-live="polite"
        />
      </fieldset>
      <div
        id="nySivilstatus.sivilstatus"
      >
        <fieldset
          aria-invalid="false"
          class="skjemagruppe inputPanelGruppe"
        >
          <div
            class="inputPanelGruppe__inner"
          >
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.enslig"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.enslig
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.ekteskap"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.ekteskap
              </span>
            </label>
            <label
              class="inputPanel radioPanel"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="inputPanel__field"
                name="nySivilstatus.sivilstatus"
                required=""
                type="radio"
                value="nySivilstatus.samboerskap"
              />
              <span
                class="inputPanel__label"
              >
                nySivilstatus.samboerskap
              </span>
            </label>
          </div>
          <div
            aria-live="polite"
          />
        </fieldset>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-ifyqMZ bWoqpb"
    >
      <div
        class="sc-gLLvby idHBWd undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-button__inner navds-body-short"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-button__inner navds-body-short"
          >
            knapp.neste
          </span>
        </button>
      </div>
      <div
        aria-live="polite"
      />
    </fieldset>
    <fieldset
      aria-invalid="false"
      class="skjemagruppe sc-iBdmCd dgiWjO undefined"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-button__inner navds-body-short"
        >
          knapp.avbryt
        </span>
      </button>
      <div
        aria-live="polite"
      />
    </fieldset>
  </form>
</div>
`;
